--- a/fe/src/app/features/list-page/components/list-page-desktop-body/tablet-cart-dropdown/tablet-cart-dropdown.component.html
+++ b/fe/src/app/features/list-page/components/list-page-desktop-body/tablet-cart-dropdown/tablet-cart-dropdown.component.html
@@ -1,64 +1,72 @@
 <div class="wrapper">
-    <ul class="list">
-        <li class="list__item">
-            <img src="https://firebasestorage.googleapis.com/v0/b/test-firebase-image-81d97.appspot.com/o/Screenshot%202024-02-20%20151404.png?alt=media&token=971da7be-cae5-4f25-95c6-146b484ac3b2"
-                class="list__item__image" />
-            <div class="list__item__info">
-                <p class="list__item__info__title">
-                    Tranh con mèo mà trèo cây cau
-                </p>
-                <a href="" class="list__item__info__view-detail">
-                    Xem chi tiết
-                </a>
-            </div>
-        </li>
-        <li class="list__item">
-            <img src="https://firebasestorage.googleapis.com/v0/b/test-firebase-image-81d97.appspot.com/o/Screenshot%202024-02-20%20151404.png?alt=media&token=971da7be-cae5-4f25-95c6-146b484ac3b2"
-                class="list__item__image" />
-            <div class="list__item__info">
-                <p class="list__item__info__title">
-                    Tranh con mèo mà trèo cây cau
-                </p>
-                <a href="" class="list__item__info__view-detail">
-                    Xem chi tiết
-                </a>
-            </div>
-        </li>
-        <li class="list__item">
-            <img src="https://firebasestorage.googleapis.com/v0/b/test-firebase-image-81d97.appspot.com/o/Screenshot%202024-02-20%20151404.png?alt=media&token=971da7be-cae5-4f25-95c6-146b484ac3b2"
-                class="list__item__image" />
-            <div class="list__item__info">
-                <p class="list__item__info__title">
-                    Tranh con mèo mà trèo cây cau
-                </p>
-                <a href="" class="list__item__info__view-detail">
-                    Xem chi tiết
-                </a>
-            </div>
-        </li>
-        <li class="list__item">
-            <img src="https://firebasestorage.googleapis.com/v0/b/test-firebase-image-81d97.appspot.com/o/Screenshot%202024-02-20%20151404.png?alt=media&token=971da7be-cae5-4f25-95c6-146b484ac3b2"
-                class="list__item__image" />
-            <div class="list__item__info">
-                <p class="list__item__info__title">
-                    Tranh con mèo mà trèo cây cau
-                </p>
-                <a href="" class="list__item__info__view-detail">
-                    Xem chi tiết
-                </a>
-            </div>
-        </li>
-        <li class="list__item">
-            <img src="https://firebasestorage.googleapis.com/v0/b/test-firebase-image-81d97.appspot.com/o/Screenshot%202024-02-20%20151404.png?alt=media&token=971da7be-cae5-4f25-95c6-146b484ac3b2"
-                class="list__item__image" />
-            <div class="list__item__info">
-                <p class="list__item__info__title">
-                    Tranh con mèo mà trèo cây cau
-                </p>
-                <a href="" class="list__item__info__view-detail">
-                    Xem chi tiết
-                </a>
-            </div>
-        </li>
-    </ul>
+    <ng-container *ngIf="isContentLoaded">
+        <ul class="list">
+            <li class="list__item">
+                <img src="https://www.aandmedu.in/wp-content/uploads/2021/11/9-16-Aspect-Ratio-576x1024.jpg"
+                    class="list__item__image" />
+                <div class="list__item__info">
+                    <p class="list__item__info__title">
+                        Tranh con mèo mà trèo cây cau
+                    </p>
+                    <a href="" class="list__item__info__view-detail">
+                        Xem chi tiết
+                    </a>
+                </div>
+            </li>
+            <li class="list__item">
+                <img src="https://firebasestorage.googleapis.com/v0/b/test-firebase-image-81d97.appspot.com/o/Screenshot%202024-02-20%20151404.png?alt=media&token=971da7be-cae5-4f25-95c6-146b484ac3b2"
+                    class="list__item__image" />
+                <div class="list__item__info">
+                    <p class="list__item__info__title">
+                        Tranh con mèo mà trèo cây cau
+                    </p>
+                    <a href="" class="list__item__info__view-detail">
+                        Xem chi tiết
+                    </a>
+                </div>
+            </li>
+            <li class="list__item">
+                <img src="https://firebasestorage.googleapis.com/v0/b/test-firebase-image-81d97.appspot.com/o/Screenshot%202024-02-20%20151404.png?alt=media&token=971da7be-cae5-4f25-95c6-146b484ac3b2"
+                    class="list__item__image" />
+                <div class="list__item__info">
+                    <p class="list__item__info__title">
+                        Tranh con mèo mà trèo cây cau
+                    </p>
+                    <a href="" class="list__item__info__view-detail">
+                        Xem chi tiết
+                    </a>
+                </div>
+            </li>
+            <li class="list__item">
+                <img src="https://firebasestorage.googleapis.com/v0/b/test-firebase-image-81d97.appspot.com/o/Screenshot%202024-02-20%20151404.png?alt=media&token=971da7be-cae5-4f25-95c6-146b484ac3b2"
+                    class="list__item__image" />
+                <div class="list__item__info">
+                    <p class="list__item__info__title">
+                        Tranh con mèo mà trèo cây cau
+                    </p>
+                    <a href="" class="list__item__info__view-detail">
+                        Xem chi tiết
+                    </a>
+                </div>
+            </li>
+            <li class="list__item">
+                <img src="https://firebasestorage.googleapis.com/v0/b/test-firebase-image-81d97.appspot.com/o/Screenshot%202024-02-20%20151404.png?alt=media&token=971da7be-cae5-4f25-95c6-146b484ac3b2"
+                    class="list__item__image" />
+                <div class="list__item__info">
+                    <p class="list__item__info__title">
+                        Tranh con mèo mà trèo cây cau
+                    </p>
+                    <a href="" class="list__item__info__view-detail">
+                        Xem chi tiết
+                    </a>
+                </div>
+            </li>
+        </ul>
+        <div class="link-group">
+            <a href=""> Đi đến giỏ hàng </a>
+            <i (click)="toggleTabletDropDown()" class="fa-solid fa-xmark"></i>
+        </div>
+    </ng-container>
+
+    <app-spinner [spinnerSize]="'sm'" *ngIf="!isContentLoaded"></app-spinner>
 </div>
