--- a/fe/src/app/features/list-page/components/list-page-tablet-side-bar/list-page-tablet-side-bar.component.css
+++ b/fe/src/app/features/list-page/components/list-page-tablet-side-bar/list-page-tablet-side-bar.component.css
@@ -71,7 +71,7 @@
 
 .left-side__inside__lower__level1-list__item {
     width: 100%;
-    aspect-ratio: 1/1;
+    height: 15%;
     display: flex;
     justify-content: center;
     align-items: center;
