--- a/fe/src/assets/css/animations.css
+++ b/fe/src/assets/css/animations.css
@@ -5,10 +5,25 @@
     }
 }
 
+@keyframes gradient-text-animation {
+    from {
+        background-position: 0 50%;
+    }
+
+    50% {
+        background-position: 100% 50%;
+    }
+
+    to {
+        background-position: 0 50%;
+    }
+}
+
 @keyframes shine-loading-image {
     0% {
         background-position: -32px;
     }
+
     40%,
     100% {
         background-position: 300px;
