--- a/fe/src/app/features/list-page/components/list-page-tablet-side-bar/list-page-tablet-side-bar.component.html
+++ b/fe/src/app/features/list-page/components/list-page-tablet-side-bar/list-page-tablet-side-bar.component.html
@@ -16,7 +16,7 @@
 
         <ul class="left-side__inside__lower__level1-list">
             <li *ngFor="let x of categoryLevel1List" id="{{x.name}}-category" (click)="toggleCategoryContent(x.name)" class="left-side__inside__lower__level1-list__item">
-                <i class="fa-solid fa-icons"></i>
+                <i class="{{x.faIcon}}"></i>
                 <span class="left-side__inside__lower__level1-list__item__text">
                     {{x.vietnameseName}}
                 </span>
